--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bootstrap": "4.3.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
