--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-social-login-buttons": "^3.0.0",
-    "reactstrap": "^8.1.1"
+    "reactstrap": "^8.1.1",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
