--- a/package.json
+++ b/package.json
@@ -24,10 +24,6 @@
     "bootstrap": "4.3.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.7.8",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "mongoose": "^5.7.8"
   }
 }
