--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "redux": "^4.0.4",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-social-login-buttons": "^3.0.0",
