--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "4.3.1",
+    "connect-mongo": "^3.1.2",
     "express": "^4.16.3",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.7.8",
     "morgan": "^1.9.1",
-    "passport": "^0.4.0"
-
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
